# homeagent

./: Dockerfile  api_voice.py  koko.py  main.py  pyproject.toml  realtime_app.py  router.py  stt_pipeline.py  test.py  voice_input.py  voice_output.py
.woodpecker/: images.yml
resources/: system_prompt.md
tests/: conftest.py  test_api_voice.py  test_router.py  test_voice_input.py
