[project]
name = "homeagent"
version = "0.1.0"
description = "Smart Home AI backbone"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "coqui-tts>=0.27.3",
    "fastapi>=0.128.0",
    "openai-whisper>=20250625",
    "pvporcupine>=4.0.1",
    "pyaudio>=0.2.14",
    "python-multipart>=0.0.21",
    "sounddevice>=0.5.3",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
