[project]
name = "homeagent"
version = "0.1.0"
description = "Smart Home AI backbone"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coqui-tts>=0.27.3",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "ipython>=9.10.0",
    "jinja2>=3.1.6",
    "kokoro-onnx>=0.5.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "misaki-fork[en]>=0.9.6",
    "nltk>=3.9.2",
    "openai>=2.21.0",
    "pip>=26.0.1",
    "pocketsphinx>=5.0",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "realtimestt>=0.3.104",
    "sounddevice>=0.5.3",
    "uvicorn>=0.40.0",
    "whisperx>=3.8.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
